moving game clock into globals

--- a/DungeonSlayer.vcxproj
+++ b/DungeonSlayer.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="DungeonSlayer.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Monsters.cpp" />
+    <ClCompile Include="globals.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="globals.h" />
