--- a/DungeonSlayer.vcxproj.filters
+++ b/DungeonSlayer.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="DungeonSlayer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NightBorne.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BOD.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h">
@@ -45,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PauseMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BOD.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
