--- a/DungeonSlayer.vcxproj.filters
+++ b/DungeonSlayer.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="BOD.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ArcanArcher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BOD.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ArcanArcher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
