--- a/DungeonSlayer.vcxproj
+++ b/DungeonSlayer.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <ClCompile Include="BOD.cpp" />
     <ClCompile Include="DungeonSlayer.cpp" />
+    <ClCompile Include="GameOver.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Monsters.cpp" />
     <ClCompile Include="globals.cpp" />
@@ -147,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BOD.h" />
+    <ClInclude Include="GameOver.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="includes.h" />
     <ClInclude Include="Menu.h" />
