adding Brain Mole

--- a/DungeonSlayer.vcxproj
+++ b/DungeonSlayer.vcxproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <ClCompile Include="ArcanArcher.cpp" />
     <ClCompile Include="BOD.cpp" />
+    <ClCompile Include="BrainMole.cpp" />
     <ClCompile Include="DungeonSlayer.cpp" />
     <ClCompile Include="GameOver.cpp" />
     <ClCompile Include="Menu.cpp" />
@@ -152,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="ArcanArcher.h" />
     <ClInclude Include="BOD.h" />
+    <ClInclude Include="BrainMole.h" />
     <ClInclude Include="GameOver.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="includes.h" />
