--- a/DungeonSlayer.vcxproj
+++ b/DungeonSlayer.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="DungeonSlayer.cpp" />
     <ClCompile Include="GameOver.cpp" />
     <ClCompile Include="Goblin.cpp" />
+    <ClCompile Include="GUI.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Monsters.cpp" />
     <ClCompile Include="globals.cpp" />
@@ -160,6 +161,7 @@
     <ClInclude Include="GameOver.h" />
     <ClInclude Include="globals.h" />
     <ClInclude Include="Goblin.h" />
+    <ClInclude Include="GUI.h" />
     <ClInclude Include="includes.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Monsters.h" />
